tests/baselines/reference/comparisonOperatorWithNoRelationshipTypeParameter.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(12,14): error TS2365: Operator '<' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(13,14): error TS2365: Operator '>' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(14,14): error TS2365: Operator '<=' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(15,14): error TS2365: Operator '>=' cannot be applied to types 'T' and 'U'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(16,14): error TS2367: This condition will always return 'false' since the types 'T' and 'U' have no overlap.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(17,14): error TS2367: This condition will always return 'true' since the types 'T' and 'U' have no overlap.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(18,14): error TS2367: This condition will always return 'false' since the types 'T' and 'U' have no overlap.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(19,14): error TS2367: This condition will always return 'true' since the types 'T' and 'U' have no overlap.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(22,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(23,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(24,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(25,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(26,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(27,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(28,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(30,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(31,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(32,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(33,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(34,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(35,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(36,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(39,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(40,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(41,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(42,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(43,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(44,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(45,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(47,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(48,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(49,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(50,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(51,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(52,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(53,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(56,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(57,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(58,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(59,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(60,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(61,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(62,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(64,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(65,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(66,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(67,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(68,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(69,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(70,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(73,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(74,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(75,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(76,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(77,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(78,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(79,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(81,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(82,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(83,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(84,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(85,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(86,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(87,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(90,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(91,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(92,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(93,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(94,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(95,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(96,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(98,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(99,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(100,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(101,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(102,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(103,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(104,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(107,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(108,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(109,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(110,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(111,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(112,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(113,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(115,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(116,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(117,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(118,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(119,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(120,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(121,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(124,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(125,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(126,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(127,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(128,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(129,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(130,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(132,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(133,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(134,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(135,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(136,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(137,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(138,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(141,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(142,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(143,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(144,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(145,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(146,16): error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(147,16): error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(149,16): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(150,16): error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(151,16): error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(152,16): error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(153,16): error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(154,16): error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts(155,16): error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipTypeParameter.ts (120 errors) ====
    enum E { a, b, c }
    
    var a: boolean;
    var b: number;
    var c: string;
    var d: void;
    var e: E;
    var f: { a: string };
    var g: any[];
    
    function foo<T, U>(t: T, u: U) {
        var r1 = t < u;
                 ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'U'.
        var r2 = t > u;
                 ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'T' and 'U'.
        var r3 = t <= u;
                 ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'T' and 'U'.
        var r4 = t >= u;
                 ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'T' and 'U'.
        var r5 = t == u;
                 ~~~~~~
!!! error TS2367: This condition will always return 'false' since the types 'T' and 'U' have no overlap.
        var r6 = t != u;
                 ~~~~~~
!!! error TS2367: This condition will always return 'true' since the types 'T' and 'U' have no overlap.
        var r7 = t === u;
                 ~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types 'T' and 'U' have no overlap.
        var r8 = t !== u;
                 ~~~~~~~
!!! error TS2367: This condition will always return 'true' since the types 'T' and 'U' have no overlap.
    
        // operator <
        var r1a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r1a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r1a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r1a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r1a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r1a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r1a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r1b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r1b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r1b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r1b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r1b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r1b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r1b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator >
        var r2a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r2a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r2a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r2a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r2a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r2a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r2a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r2b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r2b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r2b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r2b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r2b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r2b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r2b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator <=
        var r3a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r3a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r3a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r3a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r3a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r3a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r3a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r3b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r3b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r3b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r3b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r3b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r3b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r3b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator >=
        var r4a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r4a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r4a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r4a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r4a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r4a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r4a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r4b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r4b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r4b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r4b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r4b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r4b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r4b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator ==
        var r5a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r5a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r5a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r5a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r5a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r5a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r5a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r5b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r5b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r5b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r5b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r5b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r5b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r5b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator !=
        var r6a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r6a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r6a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r6a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r6a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r6a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r6a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r6b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r6b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r6b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r6b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r6b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r6b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r6b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator ===
        var r7a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r7a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r7a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r7a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r7a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r7a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r7a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r7b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r7b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r7b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r7b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r7b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r7b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r7b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    
        // operator !==
        var r8a1 = t < a;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'boolean'.
        var r8a2 = t < b;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'number'.
        var r8a3 = t < c;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'string'.
        var r8a4 = t < d;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'void'.
        var r8a5 = t < e;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'E'.
        var r8a6 = t < f;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and '{ a: string; }'.
        var r8a7 = t < g;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'any[]'.
    
        var r8b1 = a < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'T'.
        var r8b2 = b < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'T'.
        var r8b3 = c < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'T'.
        var r8b4 = d < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'T'.
        var r8b5 = e < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'T'.
        var r8b6 = f < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ a: string; }' and 'T'.
        var r8b7 = g < t;
                   ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'any[]' and 'T'.
    }